added files and partially started styling the app

--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title >Document</title>
+    <title>Notes-app</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Notes-app</h1>
+    <div class="container">
+      <h1>Notes</h1>
+      <button>Create notes</button>
+    </div>
   </body>
 </html>
