--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <div class="container">
-      <h1>Notes</h1>
-      <button>Create notes</button>
+      <h1><img src="images/delete.png" />Notes</h1>
+      <button><img src="images/edit.png" />Create notes</button>
     </div>
   </body>
 </html>
