--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <div class="container">
       <h1><img src="images/delete.png" />Notes</h1>
       <button><img src="images/edit.png" />Create notes</button>
+      <div class="notes-container">
+        <p contenteditable="true" class="input-box"></p>
+      </div>
     </div>
   </body>
 </html>
