--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
   </head>
   <body>
     <div class="container">
-      <h1><img src="images/delete.png" />Notes</h1>
+      <h1><img src="images/notes.png" />Notes</h1>
       <button><img src="images/edit.png" />Create notes</button>
       <div class="notes-container">
-        <p contenteditable="true" class="input-box"></p>
+        <p contenteditable="true" class="input-box">
+          <img src="images/delete.png" />
+        </p>
       </div>
     </div>
   </body>
